--- a/The Idea Pool/Main.storyboard
+++ b/The Idea Pool/Main.storyboard
@@ -40,9 +40,10 @@
                                 <rect key="frame" x="55.5" y="144" width="265" height="17"/>
                                 <color key="textColor" red="0.1647058824" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" enablesReturnKeyAutomatically="YES" textContentType="name"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" enablesReturnKeyAutomatically="YES" textContentType="name"/>
                                 <connections>
                                     <action selector="update:" destination="aJZ-9M-jsf" eventType="editingChanged" id="nGe-DB-XK7"/>
+                                    <outlet property="delegate" destination="aJZ-9M-jsf" id="lDw-wL-KAp"/>
                                 </connections>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cle-Zd-3vv">
@@ -56,9 +57,10 @@
                                 <rect key="frame" x="55.5" y="194" width="265" height="17"/>
                                 <color key="textColor" red="0.1647058824" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" textContentType="email"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                                 <connections>
                                     <action selector="update:" destination="aJZ-9M-jsf" eventType="editingChanged" id="nwa-z1-enj"/>
+                                    <outlet property="delegate" destination="aJZ-9M-jsf" id="iY5-eb-GiA"/>
                                 </connections>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8j-vB-v4S">
@@ -75,6 +77,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                 <connections>
                                     <action selector="update:" destination="aJZ-9M-jsf" eventType="editingChanged" id="zKu-JU-QEa"/>
+                                    <outlet property="delegate" destination="aJZ-9M-jsf" id="5jP-ae-aPo"/>
                                 </connections>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nrw-wl-J0t">
@@ -319,9 +322,10 @@
                                 <rect key="frame" x="55.5" y="147" width="265" height="17"/>
                                 <color key="textColor" red="0.1647058824" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" textContentType="email"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                                 <connections>
                                     <action selector="update:" destination="hDg-MZ-rmH" eventType="editingChanged" id="wZ3-Fx-IBq"/>
+                                    <outlet property="delegate" destination="hDg-MZ-rmH" id="ZHN-q2-Sv2"/>
                                 </connections>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FBR-Is-ESb">
@@ -338,6 +342,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                 <connections>
                                     <action selector="update:" destination="hDg-MZ-rmH" eventType="editingChanged" id="2sx-Un-wXr"/>
+                                    <outlet property="delegate" destination="hDg-MZ-rmH" id="hgy-P6-Z6P"/>
                                 </connections>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qK1-bt-gR2">
